--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
-body{
-
-    background-image: url(/Imagenes/96c0199f-7447-4661-b7fc-5f7861bfab28.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #141215;
+   }
+   
+   .fondo-personalizado {
+    background-color:#141215; /* Aquí va el color de fondo personalizado */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   
+   .fondo-personalizado img {
+    max-width: 100%;
+    max-height: 100%;
+   }
