--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
    }
    
    .fondo-personalizado {
-    background-color:#141215; /* Aquí va el color de fondo personalizado */
+    background-image: url(Imagenes/96c0199f-7447-4661-b7fc-5f7861bfab28.jpg);
     width: 100%;
     height: 100%;
     display: flex;
