--- a/style.css
+++ b/style.css
@@ -1,19 +1,6 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #141215;
-   }
-   
-   .fondo-personalizado {
-    background-image: url(Imagenes/96c0199f-7447-4661-b7fc-5f7861bfab28.jpg);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   }
-   
-   .fondo-personalizado img {
-    max-width: 100%;
-    max-height: 100%;
+   background-image: url(Imagenes/96c0199f-7447-4661-b7fc-5f7861bfab28.jpg);
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: 100% 100%
    }
